# installment_manager

./: .gitignore  DOCKER_SETUP.md  README.md  build-and-run.sh  docker-compose.dev.yml  docker-compose.prebuilt.yml  docker-compose.yml  render.yaml  render.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.optimized  Dockerfile.simple  Dockerfile.uv  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 30eb3abe5954_add_created_at_column_to_installments.py  add_created_at_column.py
backend/app/: __init__.py  main.py
backend/app/core/: celery_app.py  celery_config.py  client.py  config.py  database.py  otp.py  security.py  seed.py
backend/app/database/: base.py  models.py  seed.py
backend/app/endpoints/: admin.py  auth.py  installments.py  payments.py  products.py
backend/app/middleware/: rate_limiter.py
backend/app/models/: db_models.py  schemas.py
backend/app/services/: email.py
backend/app/tasks/: notification.py
backend/app/templates/: due_email.html  otp_email.html
backend/app/utils/: time_utils.py
backend/docs/openapi/: swagger.json
docs/postman/: installment-management-system.postman_collection.json
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prebuilt  Dockerfile.simple  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: use-auth.tsx
frontend/src/lib/: utils.ts
(+34 files in other folders)
